ladminai-appointment/main/default/objects/Location/fields/Scheduler_Active__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls whether this standard Salesforce Location is available to LadminAI Smart Appointment.</description>
    <label>Scheduler Active</label>
    <type>Checkbox</type>
</CustomField>