ladminai-appointment/main/default/objects/Location/fields/Scheduler_Managed__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies standard Salesforce Location records managed by LadminAI Smart Appointment.</description>
    <label>Scheduler Managed</label>
    <type>Checkbox</type>
</CustomField>