ladminai-appointment/main/default/objects/Location/fields/Scheduler_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Scheduler_Time_Zone__c</fullName>
    <description>Timezone used to calculate availability and booking times for this location. Falls back to the business timezone.</description>
    <label>Scheduler Time Zone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>